examples/test/testpolicy3235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3235
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key14: value14
      key4: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value24
      podSelector:
        matchLabels:
          key46: value26
          key18: value18
          key27: value32
